<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Life 4 Paws animal registration</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="animal_name">Animal Name</string>
    <string name="code">Code</string>
    <string name="foster_parent">Foster Parent</string>
    <string name="shots_status">Shots status</string>
    <string name="sex">Sex</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>
    <string name="phone_num">Foster Contact Number</string>
    <string name="microchipped">Microchipped?</string>
    <string name="animal_details">Animal Details</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Post details</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_details">Login Details</string>
    <string name="default_assigner">Default Assigner</string>

</resources>